#550. Fixed tags not showing on pagination

--- a/libsrc/scss/community.scss
+++ b/libsrc/scss/community.scss
@@ -462,7 +462,7 @@ body {
                 top: 0px;
                 left: 0px;
                 right: 0px;
-                max-height: 108px;
+                max-height: 104px;
                 overflow: hidden;
             }
             &:hover {
